[tool.poetry]
name = "rclrockstar"
version = "0.1.0"
description = "ROS 2 client library for the Rockstar programming language."
authors = ["Jacob Perron <jacobmperron@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
PyYAML = "^6.0"
argparse = "^1.4.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
ros_rocks = "rclrockstar.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
